# DINO_CREx

./: .gitignore  README.md
.cache/v/cache/: lastfailed
Batch_Iteration1/: nominal_data.pkl
Batch_Iteration2/: nominal_data.pkl
Batch_Iteration3/: nominal_data.pkl
DINObatch/: Unittest_fncG.py  Unittest_norm.py  batchFilter.py  beaconBinSPICE.py  data_generation.py  debug.txt  init.py  posVel.py  rngRngRt.py  rngRngRtBatch.py
DINObatch/Attitude/: AttitudeFilter.py  FP_MonteCarlo.py  FP_NEES.py  FP_extendedKalman.py  KF_commonAlgs.py  attEkfAlgs.py  attEkfBaseClass.py  attKalmanAlgs.py  ekfFunctions.py
DINObatch/Attitude/baseline_filter/: FP_MonteCarlo.py  FP_chiSquareTest.py  (+3 more)
DINObatch/AttitudeDet/: AttExec.py  BmatMRP.py  C2EP.py  C2MRP.py  MRP2C.py  Main.py  rk4.py  scfun.py
DINObatch/Batch_Iteration1/: Batch1.txt
DINObatch/Batch_Iteration2/: Batch2.txt
DINObatch/Batch_Iteration3/: Batch3.txt
DINObatch/P&L/: batchFilter.py  batchFilterAcc.py  beaconBinSPICE.py  commonFunctionsConfig  compare_SRP_debug.py  compare_SRP_test.py  data_generation.py  init.py  init_acc.py  parameterFile  pixelLineBatch.py  pixel_and_line_test.py  posVelAcc.py  rngRngRt.py  runAll.sh  runPL_Test.sh  run_SRP_test.sh
DINObatch/RngRngRate/: batchFilter.py  beaconBinSPICE.py  data_generation.py  init.py  posVel.py  rngRngRtBatch.py  sqntlFilter.py
DINObatch/SPICE/: 2085989.bsp  DINO_kernel.bsp  epoch_beacons.txt
DINObatch/pixelAndLine/: commonFunctionsConfig  compare_SRP_test.py
dinoModels/: CMakeLists.txt
dinoModels/ADCSAlgorithms/: CMakeLists.txt
dinoModels/ModuleTemplates/: bsk_python_template.py
dinoModels/SimCode/: CMakeLists.txt
dinoModels/SimCode/LightingSimulation/: lightSim.cpp  lightSim.h  lightSim.i
dinoModels/SimCode/opnavCamera/: demo.py  opnavCamera.py
dinoModels/SimCode/opnavCamera/_UnitTest/: camera_test.py  hdt.py
dinoModels/SimCode/opnavCamera/_UnitTest/camera_test_support_files/: 4.1.test_support.npy  4.8.test_support.npy
dinoModels/SimCode/opnavCamera/dependencies/: camera.py  em.py  propagator.py  util.py
dinoModels/SimCode/opnavCamera/dependencies/html/: annotated.html  classbodies_1_1body-members.html  classbodies_1_1body.html  classbodies_1_1sc-members.html  classbodies_1_1sc.html  classcamera_1_1beacon-members.html  classcamera_1_1beacon.html  classcamera_1_1camera-members.html  classcamera_1_1camera.html  classcamera_1_1image-members.html  classcamera_1_1image.html  classcamera_1_1scene-members.html  classcamera_1_1scene.html  classes.html  functions.html  functions_func.html  functions_vars.html  index.html
dinoModels/SimCode/opnavCamera/dependencies/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
dinoModels/SimCode/opnavCamera/dependencies/latex/: annotated.tex  classbodies_1_1body.tex  classbodies_1_1sc.tex  classcamera_1_1beacon.tex  classcamera_1_1camera.tex  classcamera_1_1image.tex  classcamera_1_1scene.tex  refman.tex
dinoModels/SimCode/opnavCamera/qe/: ACS.npz  CAT-C.npz  Hubble.npz  LBL.npz  MAT.npz  MIT-LL.npz
dinoModels/SimCode/opnavCamera/tc/: 10D.npz  20D.npz  ICR650.npz  filterforcanon.npz
dinoModels/SimCode/opnavCamera/test/: camera_test.py
dinoModels/SimCode/opnav_camera/: opnav_camera.cpp  opnav_camera.h  opnav_camera.i
dinoModels/SimCode/opnav_camera/_UnitTest/: Crux_Data.npz  Orion_Data.npz  UMi_Data.npz  test_opnav_camera.py
dinoModels/SimCode/simMessages/: ImageProcessingMsg.h  lightSimMsg.h
dinoModels/fswAlgorithms/attitudeExec/: AttitudeExecutive.py
dinoModels/fswAlgorithms/attitudeExec/Unit_Tests_Attitude/: UNIT_TEST_scfun.py
dinoModels/fswAlgorithms/fswPropagator/: FswStateProp.py
dinoModels/fswAlgorithms/imageProcessing/: ImageProcessing.py
dinoModels/fswAlgorithms/imageProcessing/_Documentation/: DINOReportMemo.cls  DINO_C-REx.sty  SER_ImageProcessingModule.tex  SER_Object_ID.tex
dinoModels/fswAlgorithms/imageProcessing/_UnitTest/: test_attitudeDetermination.py  test_integratedIPModule.py  test_objectID.py  test_resolvedBodies.py  test_starsOnly.py  test_starsOnlyExecutive.py
dinoModels/fswAlgorithms/imageProcessing/_UnitTest/test_cases/: 90_deg.npz  testcase0.npz  testcase0_2.npz  testcase1.npz  testcase2.npz  testcase3.npz
dinoModels/fswAlgorithms/imageProcessing/_UnitTest/test_cases/__MACOSX/: ._CDR_save_files
dinoModels/fswAlgorithms/imageProcessing/_UnitTest/test_cases/__MACOSX/CDR_save_files/: ._135_deg.npz
dinoModels/fswAlgorithms/imageProcessing/dependencies/: dynamicFunctions.py  imageProcessingExecutive.py  imageProcessingFunctions.py  objectIDFunctions.py  searchLocationFunctions.py
dinoModels/fswAlgorithms/image_processing/: image_processing_functions.py  test_find_centroid.py
dinoModels/modules/: _lightSim.exp  _opnav_camera.exp
dinoModels/modules/lightSim/: __init__.py  _lightSim.pyd  lightSimPYTHON_wrap.cxx  star_tracker.py
dinoModels/modules/opnav_camera/: __init__.py  _opnav_camera.pyd  opnav_camera.py  opnav_cameraPYTHON_wrap.cxx
dinoPrototype/: BV_as_indep_var.py  add_computed_temperature.py  camera_demo.py  camera_demo2.py
dinoPrototype/camera/: CDR_demos.py  add_computed_temperature.py  add_reduction_term.py  camera_demo.py  camera_demo2.py  ip_support.py  slew_study.py
dinoPrototype/dependencies/: em.py  em_debug.py  util.py
dinoPrototype/image_processing/: circles.py  dynamics.py  image_processing_functions.py  object_id_functions.py  search_location_functions.py  snr.py  test_find_centroid.py  test_object_id.py
dinoPrototype/light_sim/: CELESTIAL_BODY_PARAMETERS.csv  lightSim.py
dinoScenarios/: BSK_plotting.py  DINO_DKE.py  DINO_FSW.py  DINO_SpiceBeacon_test.py  DINO_Spice_test.py  DINO_logAndPlot.py  DINO_main.py  DINO_modeScenario.py  DINO_multiScenarios.py  DINO_scenarioUtils.py  observations_log.txt
(+341 files in other folders)
